# nightfall

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  nightfall-agent-prompt-macos-v2.md  nightfall-plan-macos.md
.github/workflows/: nightfall-ci.yml
core/: M68KRuntime.cpp  M68KRuntime.fixture.s  M68KRuntime.h  M68KRuntime.md  M68KRuntime.test.cpp  NightfallMusashiConfig.h  QuickDrawBitTransfer.cpp  QuickDrawBitTransfer.fixture.s  QuickDrawBitTransfer.md  QuickDrawBitTransfer.test.cpp  QuickDrawLine.cpp  QuickDrawLine.fixture.s  QuickDrawLine.md  QuickDrawLine.test.cpp  QuickDrawPicture.cpp  QuickDrawPicture.fixture.s  QuickDrawPicture.fuzz.cpp  QuickDrawPicture.h  QuickDrawPicture.md  QuickDrawPicture.test.cpp  QuickDrawPort.cpp  QuickDrawPort.fixture.s  QuickDrawPort.h  QuickDrawPort.md  QuickDrawPort.test.cpp  QuickDrawRect.cpp  QuickDrawRect.fixture.s  QuickDrawRect.md  QuickDrawRect.test.cpp  QuickDrawRegion.cpp  QuickDrawRegion.fixture.s  QuickDrawRegion.md  QuickDrawRegion.test.cpp  ResourceFork.cpp  ResourceFork.fixture.s  ResourceFork.h  ResourceFork.md  ResourceFork.test.cpp  ToolboxManagers.cpp  ToolboxManagers.fixture.s  (+10 more)
core/fixtures/: smoke.fixture.s  smoke.md
docs/: autonomous-operation.md  clean-room-sources.md  contamination-log.md  contamination-response.md  current-phase.md  decisions-log.md  phase-1-checklist.md  phase-2-checklist.md  phase-3-checklist.md  phase-4-validation.md  phase-4.1-validation.md  phase-4.2-validation.md  phase-4.3-validation.md  phase-4.4-validation.md  phase-4.5-validation.md  phase-4.6-validation.md  phase-5-validation.md  preflight.md  sanitizers.md  toolbox-coverage.md  trace-events.toml
docs/abi/: nightfall.h.snapshot  nightfall.symbols
docs/attestations/: TEMPLATE.md  codex-gpt-5.md
docs/blockers/: README.md  TEMPLATE.md  phase-2-asan-macos-26.md  phase-2-preflight-branch-protection.md  phase-4-checkpoint-missing-q7-artifacts.md  phase-4-missing-state-artifacts.md  phase-4.6-missing-pict-prereqs.md  phase-5-after-dark-lifecycle-contamination.md  phase-5-clean-lifecycle-abi-needed.md  phase-5-missing-flying-toasters-artifact.md  phase-5-missing-real-module-runner.md  post-spike-scope.md  preflight-provisioning.md
docs/blockers/resolved/: phase-2-asan-macos-26.md  phase-2-preflight-branch-protection.md  phase-4-checkpoint-missing-q7-artifacts.md  phase-4-missing-state-artifacts.md  phase-4.6-missing-pict-prereqs.md  phase-5-after-dark-lifecycle-contamination.md  phase-5-missing-flying-toasters-artifact.md  phase-5-missing-real-module-runner.md
scripts/: notify.sh  preflight.sh  supervise.sh
scripts/ci/: abi-guard.sh  asm-fixtures.sh  boundary-check.py  depcheck.py  gate-meta-tests.sh  nflint.py  run-local.sh  sanitizers.sh  tbcover.py  toolcheck.py  trace-schema-guard.py
tests/gates/abi-guard/bad/: nightfall.changed.h  symbols.expected
tests/gates/abi-guard/good/: nightfall.h  symbols.expected
tests/gates/asm-fixtures/bad/: broken.fixture.s
tests/gates/asm-fixtures/good/: smoke.fixture.s
tests/gates/boundary/bad/: FoundationLeak.cpp
tests/gates/boundary/good/: CoreOnly.cpp
tests/gates/depcheck/bad/: MissingPolicy.toml  Placeholder.toml
tests/gates/depcheck/good/: VERSIONS.toml
tests/gates/nflint/bad/: ForbiddenSource.cpp  Printf.cpp
tests/gates/nflint/good/: TraceOnly.cpp
tests/gates/sanitizers/bad/: run.sh
tests/gates/tbcover/bad/: MissingDoc.cpp  MissingDoc.test.cpp  MissingFixture.cpp  MissingFixture.md  MissingFixture.test.cpp  MissingTest.cpp  MissingTest.md
tests/gates/tbcover/good/: Widget.cpp  Widget.fixture.s  Widget.md  Widget.test.cpp
tests/gates/trace-schema/bad/: MissingEvent.cpp  WrongCategory.cpp
tests/gates/trace-schema/good/: Trace.cpp  trace-events.toml
tools/pict-gen/: README.md  pict-gen.py  test_pict_gen.py
tools/pict-gen/examples/: basic.yaml
tools/tbtrace/: main.cpp
